fix Clerk login issues

--- a/EquityLabs/EquityLabs/Info.plist
+++ b/EquityLabs/EquityLabs/Info.plist
@@ -12,5 +12,7 @@
 		<string>fetch</string>
 		<string>processing</string>
 	</array>
+	<key>CLERK_PUBLISHABLE_KEY</key>
+	<string>pk_live_Y2xlcmsuZXF1aXR5bGFicy5hcHAk</string>
 </dict>
 </plist>
